--- a/css/index.css
+++ b/css/index.css
@@ -1,169 +1,132 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+
 *, *:before, *:after {
-	 box-sizing: border-box;
-	 margin: 0;
-	 padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
- body {
-	 overflow: hidden;
-	 font-family: 'Dosis' sans-serif;
+
+body {
+	font-family: 'Dosis'sans-serif;
 }
- .slider {
-	 position: relative;
-	 height: 75vh;
+
+.slider {
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 90vh;
+	width: 100%;
 }
- .slider__slides {
-	 z-index: 1;
-	 position: relative;
-	 height: 100%;
+
+.slider--content {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 90vh;
 }
- .slider__control {
-	 z-index: 2;
-	 position: absolute;
-	 top: 50%;
-	 left: 5%;
-	 width: 60px;
-	 height: 60px;
-	 margin-left: -30px;
-	 margin-top: -30px;
-	 border-radius: 50%;
-	 background: #BB7372;
-     border: 3px solid #f0322f;
-	 transition: background-color 0.3s;
-	 cursor: pointer;
+
+.slider--feature {
+	text-align: center;
+	z-index: 200;
 }
- .slider__control--right {
-	 left: 95%;
+
+.heart {
+	background-image: url(../image/red-outline-heart.png);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+	width: 450px;
+	height: 450px;
+	position: absolute;
+	opacity: .5;
+	left: 50%;
+	bottom: -40px;
+	transform: translate(-50%, -50%);
+	z-index: 100;
 }
- .slider__control:hover {
-	 background-color: #BB7372;
+
+.slider--title {
+	font-size: 7.5rem;
+	color: #fff;
+	font-family: 'Great Vibes', cursive;
+	font-weight: 500;
+	text-shadow: #000 5px 5px 5px;
 }
- .slider__control-line {
-	 position: absolute;
-	 left: 23px;
-	 top: 50%;
-	 width: 3px;
-	 height: 14px;
-	 transform-origin: 50% 0;
-	 transform: rotate(-45deg);
+
+.slider--text {
+	font-size: 2rem;
+	color: #fff;
+	margin: 0.5rem 0;
+	text-shadow: #000 5px 5px 5px;
 }
- .slider__control-line:nth-child(2) {
-	 transform: translateY(1px) rotate(-135deg);
+
+.slider__btn-right,
+.slider__btn-left {
+	background: transparent;
+	border: none;
+	outline: none;
+	font-size: 4rem;
+	color: #eee;
+	padding: 0 1rem;
+	cursor: pointer;
+	transition: transform 0.1s ease-in-out;
+	opacity: .4;
 }
- .slider__control--right .slider__control-line {
-	 left: 37px;
-	 transform-origin: 1px 0;
-	 transform: rotate(45deg);
+
+.slider--btn {
+	background: #fff;
+	text-transform: uppercase;
+	border: none;
+	color: #444;
+	border: 1px solid #444;
+	outline: none;
+	font-weight: 700;
+	padding: 0.8rem 2rem;
+	cursor: pointer;
 }
- .slider__control--right .slider__control-line:nth-child(2) {
-	 transform: translateY(1px) rotate(135deg);
+
+.slider__btn-left:hover,
+.slider__btn-right:hover {
+	transform: scale(0.95);
 }
- .slider__control-line:after {
-	 content: "";
-	 position: absolute;
-	 left: 0;
-	 top: 0;
-	 width: 100%;
-	 height: 100%;
-	 background-color: #e2e2e2;
-	 transition: background-color 0.3s;
-}
- .slider__control:hover .slider__control-line:after {
-	 background-color: #fff;
-}
- .slider__control.a--rotation .slider__control-line:after {
-	 animation: arrowLineRotation 0.49s;
-}
- .slider__control.a--rotation .slider__control-line:nth-child(1):after {
-	 animation: arrowLineRotationRev 0.49s;
-}
- @keyframes arrowLineRotation {
-	 to {
-		 transform: rotate(180deg);
+
+@media (max-width: 767px) {
+	.slider--feature {
+		position: absolute;
+		top: 60%;
+		left: 11%;
+	}
+
+	.slider--title {
+		font-size: 2rem;
+	}
+
+	.slider__btn-right,
+	.slider__btn-left {
+		z-index: 300;
+	}
+
+	.heart {
+		top: 70%;
+		width: 350px;
+		height: 350px;
+		z-index: 50;
+	}
+	.slider--text{
+		font-size: 1rem;
 	}
 }
- @keyframes arrowLineRotationRev {
-	 to {
-		 transform: rotate(-180deg);
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0.6;
+	}
+
+	100% {
+		opacity: 1;
 	}
 }
- .slide {
-	 overflow: hidden;
-	 position: absolute;
-	 left: 50%;
-	 top: 50%;
-	 width: 150vmax;
-	 height: 150vmax;
-	 transform: translate(-50%, -50%);
-	 border-radius: 50%;
-	 transition: clip-path 0s 0.91s;
-	 clip-path: circle(30px at 120vw 50%);
+
+.fadeIn {
+	animation: fadeIn 1s;
 }
- .slide.s--prev {
-	 clip-path: circle(30px at 30vw 50%);
-}
- .slide.s--active {
-	 z-index: 1;
-	 transition: clip-path 1.3s;
-	 clip-path: circle(120vmax at 120vw 50%);
-}
- .slide.s--active.s--active-prev {
-	 clip-path: circle(120vmax at 30vw 50%);
-}
- .slide:nth-child(1) .slide__inner {
-	 background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/onepgscr-2.jpg");
-}
- .slide:nth-child(2) .slide__inner {
-	 background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/onepgscr-3.jpg");
-}
- .slide:nth-child(3) .slide__inner {
-	 background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/onepgscr-4.jpg");
-}
- .slide:nth-child(4) .slide__inner {
-	 background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/onepgscr-5.jpg");
-}
- .slide:nth-child(5) .slide__inner {
-	 background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/onepgscr-6.jpg");
-}
- .slide__inner {
-	 position: absolute;
-	 left: 50%;
-	 top: 50%;
-	 width: 100vw;
-	 height: 100vh;
-	 margin-left: -50vw;
-	 margin-top: -50vh;
-	 background-size: cover;
-	 background-position: center center;
-}
- .slide__inner:before {
-	 content: "";
-	 position: absolute;
-	 left: 0;
-	 top: 0;
-	 width: 100%;
-	 height: 100%;
-	 background: rgba(0, 0, 0, 0.3);
-}
- .slide__content {
-	 position: absolute;
-	 left: 50%;
-	 top: 50%;
-	 margin-left: -30px;
-	 margin-top: 48px;
-	 max-width: 480px;
-	 color: #fff;
-}
- .slide__heading {
-	 margin-bottom: 20px;
-     font-family: "Great Vibes", cursive;
-	 font-size: 60px;
-}
- .slide__text {
-	 font-size: 25px;
-}
- .slide__text a {
-	 color: inherit;
-}
- 
